# digitraffic-catalog

./: .gitignore  README.md  bundle-css.sh  lefthook.yml  package-lock.json  package.json  start-sass-watch.sh
.github/: CODEOWNERS  dependabot.yml  trufflehog-exclude.txt
dcat_schema_transpiler/: .gitignore  README.md  poetry.toml  pyproject.toml
dcat_schema_transpiler/dcat_schema_transpiler/: mobility_dcat_ap_to_schema.py  rdflib_util.py  transpiler.py
dcat_schema_transpiler/dcat_schema_transpiler/asset_description_metadata_schema/: namespace.py
dcat_schema_transpiler/dcat_schema_transpiler/cache/: vocabularies.py
dcat_schema_transpiler/dcat_schema_transpiler/ckan_schema/mobility_dcat_ap_converter/: __init__.py  class_converter.py  range_value_converter.py
dcat_schema_transpiler/dcat_schema_transpiler/ckan_schema/mobility_dcat_ap_converter/classes/: agent.py  assessment.py  catalogue_record.py  data_service.py  dataset.py  distribution.py  frequency.py  kind.py  license_document.py  linguistic_system.py  locn_address.py  media_type_or_extent.py  mobility_data_standard.py  organization.py  period_of_time.py  quality_annotation.py  rights_statement.py  vcard_address.py
dcat_schema_transpiler/dcat_schema_transpiler/ckan_schema/mobility_dcat_ap_converter/i18n/: translations.py
dcat_schema_transpiler/dcat_schema_transpiler/file_handler/: schema.py
dcat_schema_transpiler/dcat_schema_transpiler/integration/: client.py
dcat_schema_transpiler/dcat_schema_transpiler/mobility_dcat_ap/: dataset.py  namespace.py
dcat_schema_transpiler/dcat_schema_transpiler/namespaces/: ADMS.py  DCAT_AP.py  DQV.py  LOCN.py  VCARD.py
dcat_schema_transpiler/dcat_schema_transpiler/rdfs/: iri_resource.py  rdf_iri_resource.py  rdfs_blank_node.py  rdfs_class.py  rdfs_literal.py  rdfs_property.py  rdfs_resource.py  resource.py  util.py
dcat_schema_transpiler/scripts/: all_vocabs_to_csv.py  rdf_to_csv.py
dcat_schema_transpiler/tests/rdfs/: test_iri_resource.py
ext/ckanext-digitraffic_opentelemetry/: .gitignore  MANIFEST.in  README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  test.ini
ext/ckanext-digitraffic_opentelemetry/ckanext/digitraffic_opentelemetry/: plugin.py
ext/ckanext-digitraffic_opentelemetry/ckanext/digitraffic_opentelemetry/instrumentation/: __init__.py  ckan_instrumentation.py  contrib.py
ext/ckanext-digitraffic_opentelemetry/ckanext/digitraffic_opentelemetry/log/: __init__.py  configurer.py  span_event_handler.py
ext/ckanext-digitraffic_opentelemetry/ckanext/digitraffic_opentelemetry/trace/: __init__.py  configurer.py  w3c_extractor_propagator.py
(+674 files in other folders)
